--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,9 @@
 # LiveKit API Configuration
 LIVEKIT_API_KEY=YOUR_API_KEY
 LIVEKIT_API_SECRET=YOUR_API_SECRET
-LIVEKIT_URL=YOUR_LIVEKIT_URL
 
 # Public configuration
-NEXT_PUBLIC_LIVEKIT_URL=YOUR_LIVEKIT_URL
+NEXT_PUBLIC_LIVEKIT_URL=wss://YOUR_LIVEKIT_URL
 
 # Application Configuration
 NEXT_PUBLIC_APP_CONFIG="
