--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@livekit/components-react": "latest",
+    "@livekit/components-react": "^1.5.1",
     "framer-motion": "^10.16.16",
     "js-yaml": "^4.1.0",
     "livekit-client": "^1.15.4",
     "livekit-server-sdk": "^1.2.7",
-    "next": "14.0.1",
+    "next": "^14.0.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18"
