--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ title: 'LiveKit Agent Playground'
 description: 'LiveKit Agent Playground allows you to test your LiveKit Agent integration by connecting to your LiveKit Cloud or self-hosted instance.'
 github_link: 'https://github.com/livekit-examples/agent-playground'
 theme_color: 'cyan'
+video_fit: 'cover' # 'contain' or 'cover'
 outputs:
   audio: true # Enable or disable audio output
   video: true # Enable or disable video output
