--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@livekit/components-react": "^2.0.0",
+    "@livekit/components-react": "^2.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "framer-motion": "^10.16.16",
     "js-yaml": "^4.1.0",
-    "livekit-client": "^2.0.2",
-    "livekit-server-sdk": "^2.0.3",
+    "livekit-client": "^2.1.0",
+    "livekit-server-sdk": "^2.1.2",
+    "lodash": "^4.17.21",
     "next": "^14.0.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
+    "@types/lodash": "^4.17.0",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18",
