some refactoring, wip

--- a/.env.example
+++ b/.env.example
@@ -10,14 +10,15 @@ NEXT_PUBLIC_APP_CONFIG="
 title: 'LiveKit Agent Playground'
 description: 'LiveKit Agent Playground allows you to test your LiveKit Agent integration by connecting to your LiveKit Cloud or self-hosted instance.'
 github_link: 'https://github.com/livekit/agents-playground'
-theme_color: 'cyan'
 video_fit: 'cover' # 'contain' or 'cover'
-outputs:
-  audio: true # Enable or disable audio output
-  video: true # Enable or disable video output
+user_settings:
+  theme_color: 'cyan'
   chat: true  # Enable or disable chat feature
-inputs:
-  mic: true    # Enable or disable microphone input
-  camera: true # Enable or disable camera input
-  sip: true    # Enable or disable SIP input
+  outputs:
+    audio: true # Enable or disable audio output
+    video: true # Enable or disable video output
+  inputs:
+    mic: true    # Enable or disable microphone input
+    camera: true # Enable or disable camera input
+    sip: true    # Enable or disable SIP input
 "
