--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@livekit/components-react": "^2.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "cookies-next": "^4.1.1",
     "framer-motion": "^10.16.16",
     "js-yaml": "^4.1.0",
     "livekit-client": "^2.1.0",
