user_settings -> settings

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ title: 'LiveKit Agent Playground'
 description: 'LiveKit Agent Playground allows you to test your LiveKit Agent integration by connecting to your LiveKit Cloud or self-hosted instance.'
 github_link: 'https://github.com/livekit/agents-playground'
 video_fit: 'cover' # 'contain' or 'cover'
-user_settings:
+settings:
   theme_color: 'cyan'
   chat: true  # Enable or disable chat feature
   outputs:
