Editable config setting

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ description: 'LiveKit Agent Playground allows you to test your LiveKit Agent int
 github_link: 'https://github.com/livekit/agents-playground'
 video_fit: 'cover' # 'contain' or 'cover'
 settings:
+  editable: true # Should the user be able to edit settings in-app
   theme_color: 'cyan'
   chat: true  # Enable or disable chat feature
   outputs:
