--- a/package.json
+++ b/package.json
@@ -11,18 +11,13 @@
   "dependencies": {
     "@livekit/components-react": "^2.3.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@types/canvas-fit": "^1.5.4",
-    "@types/dat-gui": "^0.6.3",
-    "@types/delaunator": "^5.0.3",
-    "@types/dom-css": "^2.1.1",
-    "@types/shuffle-array": "^1.0.5",
     "3d-view-controls": "^2.2.0",
     "alea": "^0.0.9",
     "budo": "^10.0.4",
     "canvas-fit": "^1.5.0",
     "cookies-next": "^4.1.1",
     "dat-gui": "^0.5.0",
-    "delaunator": "^5.0.1",
+    "delaunator": "^1.0.4",
     "dom-css": "^2.1.0",
     "framer-motion": "^10.16.16",
     "get-plane-normal": "^1.0.0",
@@ -34,6 +29,7 @@
     "livekit-client": "^2.1.5",
     "livekit-server-sdk": "^2.1.2",
     "lodash": "^4.17.21",
+    "new-array": "^1.0.0",
     "next": "^14.0.4",
     "qrcode.react": "^3.1.0",
     "rc-slider": "^10.6.2",
@@ -51,7 +47,6 @@
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
-    "@types/react-collapse": "^5.0.4",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
