--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "shuffle-array": "^1.0.1",
     "simplex-noise": "^2.3.0",
     "spring-animator": "^1.0.3",
-    "standard": "^10.0.3"
+    "standard": "^10.0.3",
+    "web-audio-analyser": "^2.0.1",
+    "web-audio-player": "^1.3.3"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
