--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookies-next": "^4.1.1",
     "framer-motion": "^10.16.16",
     "js-yaml": "^4.1.0",
-    "livekit-client": "^2.1.5",
+    "livekit-client": "link:../client-sdk-js",
     "livekit-server-sdk": "^2.1.2",
     "lodash": "^4.17.21",
     "next": "^14.0.4",
