--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "next": "^14.0.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18",
-    "react-hot-toast": "^2.4.1"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
