--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -27,7 +27,7 @@ env:
       - RUNTIME
   
   - variable: NEXT_PUBLIC_APP_CONFIG
-    value: >
+    value: |
       title: 'iPresence Agent Playground'
       description: 'iPresence Agent Playground allows you to test your LiveKit Agent integration by connecting to your LiveKit Cloud or self-hosted instance.'
       github_link: 'https://github.com/livekit/agents-playground'
