--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -27,27 +27,23 @@ env:
       - RUNTIME
   
   - variable: NEXT_PUBLIC_APP_CONFIG
-    value: >
-      {
-        "title": "iPresence Agent Playground",
-        "description": "iPresence Agent Playground allows you to test your LiveKit Agent integration by connecting to your LiveKit Cloud or self-hosted instance.",
-        "github_link": "https://github.com/livekit/agents-playground",
-        "video_fit": "cover",
-        "settings": {
-          "editable": true,
-          "theme_color": "cyan",
-          "chat": true,
-          "outputs": {
-            "audio": true,
-            "video": true
-          },
-          "inputs": {
-            "mic": true,
-            "camera": true,
-            "sip": true
-          }
-        }
-      }
+    value: |
+      title: iPresence Agent Playground
+      description: iPresence Agent Playground allows you to test your LiveKit Agent integration by connecting to your LiveKit Cloud or self-hosted instance.
+      github_link: https://github.com/livekit/agents-playground
+      video_fit: cover
+      settings:
+        editable: true
+        theme_color: cyan
+        chat: true
+        outputs:
+          audio: true
+          video: true
+        inputs:
+          mic: true
+          camera: true
+          sip: true
+          
     availability:
       - BUILD
       - RUNTIME
