--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "^14.0.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.9",
