--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@livekit/components-react": "^2.5.2",
-    "@livekit/components-styles": "^1.1.0",
+    "@livekit/components-styles": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "cookies-next": "^4.1.1",
     "framer-motion": "^10.16.16",
@@ -19,6 +19,7 @@
     "livekit-server-sdk": "^2.6.1",
     "lodash": "^4.17.21",
     "next": "^14.0.4",
+    "next-plugin-preval": "^1.2.6",
     "qrcode.react": "^4.0.0",
     "react": "^18",
     "react-dom": "^18"
