--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@livekit/components-react": "^2.3.1",
+    "@livekit/components-react": "^2.5.2",
+    "@livekit/components-styles": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "cookies-next": "^4.1.1",
     "framer-motion": "^10.16.16",
     "js-yaml": "^4.1.0",
-    "livekit-client": "^2.1.5",
-    "livekit-server-sdk": "^2.1.2",
+    "livekit-client": "^2.5.1",
+    "livekit-server-sdk": "^2.6.1",
     "lodash": "^4.17.21",
     "next": "^14.0.4",
+    "next-plugin-preval": "^1.2.6",
     "qrcode.react": "^4.0.0",
     "react": "^18",
     "react-dom": "^18"
