Implement dispatch agent

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # LiveKit API Configuration
-LIVEKIT_API_KEY=YOUR_API_KEY
-LIVEKIT_API_SECRET=YOUR_API_SECRET
+LIVEKIT_API_KEY=vault:LIVEKIT_SERVER_KEY
+LIVEKIT_API_SECRET=vault:LIVEKIT_SERVER_SECRET
 
 # Public configuration
-NEXT_PUBLIC_LIVEKIT_URL=wss://YOUR_LIVEKIT_URL
+NEXT_PUBLIC_LIVEKIT_URL=wss://csa-livekit-server.csa.svc.cluster.local
 
 # Application Configuration
 NEXT_PUBLIC_APP_CONFIG="
@@ -23,3 +23,28 @@ settings:
     camera: true # Enable or disable camera input
     sip: true    # Enable or disable SIP input
 "
+
+# Custom ENVs
+NEXT_PUBLIC_AGENT_NAMES="debt-collection"
+NEXT_PUBLIC_DEFAULT_METADATA='
+{
+    "customer_data": {
+        "today": "07/03/2025",
+        "gender": "Anh",
+        "due_date": "07/03/2025",
+        "due_time": "11:00",
+        "debt_left": 1000000,
+        "voice_type": "femalenorth-01",
+        "phone_number": "+84000000000",
+        "customer_name": "Nguyễn A",
+        "disburse_date": "07/03/2025",
+        "interest_rate": 0.7,
+        "product_group": "Loan",
+        "app_onboarding": true,
+        "payment_amount": 1000000,
+        "payment_method": "Card",
+        "customer_first_name": "A"
+    },
+    "scenario_id": "pre-due"
+}
+'
