WIP: Customise LiveKitPlayground, show system prompt and agent state

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,25 @@
 # LiveKit API Configuration
-LIVEKIT_API_KEY=YOUR_API_KEY
-LIVEKIT_API_SECRET=YOUR_API_SECRET
+LIVEKIT_API_KEY=
+LIVEKIT_API_SECRET=
 
 # Public configuration
-NEXT_PUBLIC_LIVEKIT_URL=wss://YOUR_LIVEKIT_URL
+NEXT_PUBLIC_LIVEKIT_URL=
 
 # Application Configuration
 NEXT_PUBLIC_APP_CONFIG="
-title: 'LiveKit Agents Playground'
-description: 'A virtual workbench for your multimodal AI agents.'
-github_link: 'https://github.com/livekit/agents-playground'
+title: 'Reveri Agents Playground'
+# description: 'A virtual workbench for your multimodal AI agents.'
+# github_link: 'https://github.com/livekit/agents-playground'
 video_fit: 'cover' # 'contain' or 'cover'
 settings:
   editable: true # Should the user be able to edit settings in-app
-  theme_color: 'cyan'
+  theme_color: 'violet'
   chat: true  # Enable or disable chat feature
   outputs:
     audio: true # Enable or disable audio output
-    video: true # Enable or disable video output
+    video: false # Enable or disable video output
   inputs:
     mic: true    # Enable or disable microphone input
-    camera: true # Enable or disable camera input
-    sip: true    # Enable or disable SIP input
+    camera: false # Enable or disable camera input
+    sip: false    # Enable or disable SIP input
 "
