--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,7 @@
 # LiveKit API Configuration
-LIVEKIT_API_KEY=YOUR_API_KEY
-LIVEKIT_API_SECRET=YOUR_API_SECRET
-
-# Public configuration
-NEXT_PUBLIC_LIVEKIT_URL=wss://YOUR_LIVEKIT_URL
+LIVEKIT_API_KEY=APIAszBruDuFUzB
+LIVEKIT_API_SECRET=zIrZreqfd4TELG4rOs1eGHn3WM43DWrxnPcVzJqvFEfA
+LIVEKIT_URL=wss://ai-voice-agent-x7b2apnt.livekit.cloud
 
 # Application Configuration
 NEXT_PUBLIC_APP_CONFIG="
