--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@livekit/components-react": "^2.9.3",
     "@livekit/components-styles": "^1.1.5",
+    "@livekit/protocol": "^1.43.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "cookies-next": "^4.3.0",
     "framer-motion": "^10.18.0",
@@ -35,8 +36,8 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.26",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
-    "typescript": "^5.7.2",
-    "prettier": "^3.4.2"
+    "typescript": "^5.7.2"
   }
 }
