--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@livekit/components-core": "^0.12.11",
     "@livekit/components-react": "^2.9.3",
     "@livekit/components-styles": "^1.1.5",
+    "@livekit/protocol": "^1.43.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "cookies-next": "^6.0.0",
     "framer-motion": "^12.0.0",
     "js-yaml": "^4.1.0",
     "livekit-client": "^2.9.5",
-    "livekit-server-sdk": "^2.13.0",
+    "livekit-server-sdk": "^2.14.2",
     "lodash": "^4.17.21",
     "next": "^15.5.6",
     "next-plugin-preval": "^1.2.6",
@@ -35,8 +37,8 @@
     "eslint": "^9.0.0",
     "eslint-config-next": "16.0.5",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.18",
-    "typescript": "^5.7.2",
-    "prettier": "^3.4.2"
+    "typescript": "^5.7.2"
   }
 }
