--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
-    "eslint-config-next": "16.0.5",
+    "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.49",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.18",
