feat: update to Agent SDK

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@livekit/components-core": "^0.12.11",
-    "@livekit/components-react": "^2.9.3",
-    "@livekit/components-styles": "^1.1.5",
+    "@livekit/components-react": "^2.9.16",
+    "@livekit/components-styles": "^1.2.0",
     "@livekit/protocol": "^1.43.2",
+    "@bufbuild/protobuf": "^1.10.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "cookies-next": "^6.0.0",
     "framer-motion": "^12.0.0",
     "js-yaml": "^4.1.0",
-    "livekit-client": "^2.9.5",
+    "livekit-client": "^2.16.0",
     "livekit-server-sdk": "^2.14.2",
     "lodash": "^4.17.21",
     "next": "^15.5.6",
